[gd_scene load_steps=10 format=3 uid="uid://transition_scene"]

[ext_resource type="Script" path="res://gameplay/transition/transition.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://gameplay/transition/parallax-demon-woods-bg.png" id="2_bg"]
[ext_resource type="Texture2D" path="res://gameplay/transition/parallax-demon-woods-far-trees.png" id="3_far"]
[ext_resource type="Texture2D" path="res://gameplay/transition/parallax-demon-woods-mid-trees.png" id="4_mid"]
[ext_resource type="Texture2D" path="res://gameplay/transition/parallax-demon-woods-close-trees.png" id="5_close"]
[ext_resource type="Shader" path="res://nodes/background/red_forest/parallax_scroll.gdshader" id="6_shader"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1"]
shader = ExtResource("6_shader")
shader_parameter/scroll_offset = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2"]
shader = ExtResource("6_shader")
shader_parameter/scroll_offset = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3"]
shader = ExtResource("6_shader")
shader_parameter/scroll_offset = 0.0

[node name="Transition" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="ParallaxBackground" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BgLayer" type="TextureRect" parent="ParallaxBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
expand_mode = 1
stretch_mode = 5

[node name="FarTrees" type="TextureRect" parent="ParallaxBackground"]
material = SubResource("ShaderMaterial_1")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_far")
expand_mode = 1
stretch_mode = 5

[node name="MidTrees" type="TextureRect" parent="ParallaxBackground"]
material = SubResource("ShaderMaterial_2")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_mid")
expand_mode = 1
stretch_mode = 5

[node name="CloseTrees" type="TextureRect" parent="ParallaxBackground"]
material = SubResource("ShaderMaterial_3")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_close")
expand_mode = 1
stretch_mode = 5

[node name="FadeRect" type="ColorRect" parent="."]
visible = false
z_index = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Spinner" type="Control" parent="."]
visible = false
z_index = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SpinnerCircle" type="ColorRect" parent="Spinner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="OuterCircle" type="ColorRect" parent="Spinner"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(24, 24)
color = Color(1, 1, 1, 0.2)

[node name="InnerCircle" type="ColorRect" parent="Spinner"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(16, 16)
color = Color(1, 1, 1, 0.5)

[node name="Dot1" type="ColorRect" parent="Spinner"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -28.0
offset_right = 4.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 1)

[node name="Dot2" type="ColorRect" parent="Spinner"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -4.0
offset_right = 28.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.7)

[node name="Dot3" type="ColorRect" parent="Spinner"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = 20.0
offset_right = 4.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.4)

[node name="Dot4" type="ColorRect" parent="Spinner"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -4.0
offset_right = -20.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.6)

[node name="ProgressBar" type="ProgressBar" parent="."]
z_index = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
value = 0.0
show_percentage = false
